--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib>=3.9.2",
     "scipy>=1.14.0",
     "pyqt6>=6.7.1",
+    "dearpygui>=1.11.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
