ECG 用に neurokit2 追加

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "scipy>=1.14.0",
     "pyqt6>=6.7.1",
     "dearpygui>=1.11.1",
+    "neurokit2>=0.2.10",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
