--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "dearpygui>=1.11.1",
     "neurokit2>=0.2.10",
     "ipykernel>=6.29.5",
+    "hydra-core>=1.3.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
