--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "neurokit2>=0.2.10",
     "ipykernel>=6.29.5",
     "hydra-core>=1.3.2",
+    "seaborn>=0.13.2",
+    "streamlit>=1.39.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
