--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "neurokit2>=0.2.10",
     "numpy>=2.1.2",
     "pyqt6>=6.7.1",
+    "pywavelets>=1.7.0",
     "scipy>=1.14.1",
     "seaborn>=0.13.2",
     "streamlit>=1.39.0",
