--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,16 @@ requires-python = ">=3.12"
 dependencies = [
     "hydra-core>=1.3.2",
     "ipykernel>=6.29.5",
+    "llvmlite>=0.43.0",
     "matplotlib>=3.9.2",
     "neurokit2>=0.2.10",
-    "numpy>=2.1.2",
+    "numba>=0.60.0",
+    "numpy==2.0.2",
     "pyqt6>=6.7.1",
     "pywavelets>=1.7.0",
+    "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
     "seaborn>=0.13.2",
+    "shap>=0.46.0",
     "streamlit>=1.39.0",
 ]
