--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "emd-signal>=1.6.4",
     "hydra-core>=1.3.2",
     "ipykernel>=6.29.5",
     "llvmlite>=0.43.0",
