--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,6 @@ dependencies = [
     "scipy>=1.14.1",
     "seaborn>=0.13.2",
     "shap>=0.46.0",
+    "streamlit-aggrid>=1.0.5",
     "streamlit>=1.39.0",
 ]
