--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,8 @@ dependencies = [
     "pytk>=0.0.2.1",
     "celery>=5.5.0",
     "pydmd>=2025.5.1",
+    "fastapi>=0.124.4",
+    "uvicorn>=0.38.0",
+    "jinja2>=3.1.4",
+    "python-multipart>=0.0.20",
 ]
